--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "version": "1.0.0",
   "private": true,
   "dependencies": {
-    "@nativescript/core": "~8.8.0",
-    "uuid": "^9.0.1"
+    "crypto-browserify": "^3.12.1",
+    "uuid": "^11.0.2"
   },
   "devDependencies": {
-    "@nativescript/preview-cli": "^1.0.13",
+    "@nativescript/core": "^8.8.4",
+    "@nativescript/preview-cli": "1.0.13",
     "@nativescript/stackblitz": "^0.0.8",
     "@nativescript/tailwind": "^2.1.0",
     "@nativescript/types-minimal": "~8.8.0",
-    "@nativescript/webpack": "~5.0.0",
-    "@types/node": "^20.11.24",
-    "@types/uuid": "^9.0.8",
-    "tailwindcss": "~3.4.0",
-    "typescript": "~5.4.0"
+    "@nativescript/webpack": "~5.0.22",
+    "@types/node": "^22.8.7",
+    "@types/uuid": "^10.0.0",
+    "nativescript": "^8.8.2",
+    "tailwindcss": "~3.4.14",
+    "typescript": "~5.6.3"
   }
 }
